# sync

./: notes.txt  package.json
client/: package.json  tsconfig.json
client/src/: collection.ts  common.ts  core.ts  lib.ts  path.ts  ref.ts
client/src/adapt/: collection.ts  ref.ts
client/src/engine/: memory.ts  ws.ts
server/: .gitignore  Cargo.toml  db.sqlite  deploy.sh
server/src/: error.rs  main.rs
test/: main.js  package.json  tsconfig.json
test-example/: package.json  tsconfig.json  vite.config.js
test-example/src/: index.html  main.ts
test-example/src/view/: App.vue
test-example/src/vue/: vue.d.ts
test/src/: main.ts  test.ts
web-explorer/: package.json  vite.config.js
web-explorer/src/: main.ts
web-explorer/src/view/: App.vue
