[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
serde = "1.0"
serde_qs = "0.10"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"]}
tokio-stream = { version = "0.1" }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.8"
futures = "0.3"
rand = "0.8"
hex = "0.4"
url = "2.3"
